Vereinheitlichung TableModel Collaboration